# bert-sentimental-classification

./: README.md  pre_train.py  pyproject.toml  sample.py  train.py
.github/workflows/: lint.yml
