[tool.poetry]
name = "bert-sentimental-classification"
version = "0.1.0"
license = "MIT"
description = "Sentimental classification using BERT"
authors = ["0num4 <r.oonuma@matsuri-tech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.36.2"
datasets = "^2.16.1"
torch = "^2.1.2"
fugashi = "^1.3.0"
ipadic = "^1.0.0"
unidic = "^1.1.0"
unidic-lite = "^1.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
